2002-03-22  Ryan Nunn  <triforce@merlin.net.au>
	* usecode/ucinternal.cc : Added break in opcode 0xCD.

2002-03-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* headers/exceptions.h: fixed typo

2002-03-20  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapelst.cc: "New shape", "Edit tiled" added to popup in
	shape browser.

2002-03-20  Ryan Nunn  <triforce@merlin.net.au>
	* game.cc : Fixing allignment problem in German BG Menu

2002-03-20  Ryan Nunn  <triforce@merlin.net.au>
	* bggame.cc : Fixing problems with overlapping text in German create
	  new game screen.

2002-03-18  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapelst.cc: Import/export frames.  Also put in WIN32
	code (untested) for running image-editor.

2002-03-18  Dominik Reichardt <gigdr@tesionmail.de>
	* mapedit/gimpwin32.txt: added to provide a small guide for install/usage

2002-03-17 Darke <darkepaw@users.sourceforge.net>
	* mapedit/paledit.[cc,h], mapedit/shapefile.cc, shapes/vgafile.[cc,h],
	tools/ipack.cc, tools/textpack.cc, usecode/ucxt/src/ucxt.cc: fixed
	namespace issues, and casting.

2002-03-16  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/*:  Implemented preferences dialog.
	* shapes/vgafile.cc (Shape_frame): Datalen wasn't set right for
	flats.
	* mapedit/shapelst.cc,etc:  Re-import shapes that have been modified.

2002-03-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/uctools.h: added 32 bit opcodes
	* usecode/*, tools/wud.c: support for 32 bit opcodes and headers
	* tools/wuc.c: support for 32 bit opcodes
	* tools/wuc.c: produce warnings when offsets out of the 16 bit range
	* tools/rip.c: support 32 bit headers

2002-03-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* docs/usecode32.txt: attempt at specs for 32 bit usecode

2002-03-15  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapes/vgafile.{cc,h}:  New methods for constructing, modifying 
	shapes and writing them out.