@@ -33,7 +33,12 @@ class Cheat
 
   void init (void);
   void finish_init (void);
-
+  enum Map_editor_mode {
+	move = 0,			// Normal dragging.
+	paint = 1,			// Left-mouse dragging paints.
+	select = 2,			// Left-mouse selects.
+	hide = 3			// Left-mouse hides.
+  };
 private:
   Game_window *gwin;
   ShapeBrowser *browser;
@@ -44,6 +49,7 @@ private:
   bool wizard_mode;
   bool map_editor;
   bool tile_grid;
+  Map_editor_mode edit_mode;
   int  edit_lift;
   int  edit_shape, edit_frame;		// What to 'paint' with.
   bool infravision;
@@ -62,6 +68,7 @@ public:
   bool in_wizard_mode (void) const { return wizard_mode; }
   bool in_map_editor(void) const { return map_editor; }
   bool show_tile_grid(void) const { return map_editor && tile_grid; }
+  Map_editor_mode get_edit_mode(void) const { return edit_mode; }
   int  get_edit_lift(void) const { return edit_lift; }
   int  get_edit_shape(void) const { return edit_shape; }
   int  get_edit_frame(void) const { return edit_frame; }
@@ -75,6 +82,7 @@ public:
   void set_wizard (bool wizard) { wizard_mode = wizard; }
   void toggle_map_editor (void);
   void toggle_tile_grid (void);
+  void set_edit_mode(Map_editor_mode md) { edit_mode = md; }
   void set_edit_lift(int lift);
   void set_edit_shape(int sh, int fr);
   void set_map_editor (bool map) { map_editor = map; }
