@@ -361,6 +361,13 @@ static void Handle_client_message
 			}
 		break;
 		}
+	case Exult_server::set_edit_mode:
+		{
+		int md = Read2(ptr);
+		if (md >= 0 && md <= 3)
+			cheat.set_edit_mode((Cheat::Map_editor_mode) md);
+		break;
+		}
 		}
 	}
 
